--- a/.github/workflows/docker-image-flexget.yml
+++ b/.github/workflows/docker-image-flexget.yml
@@ -82,6 +82,10 @@ jobs:
             type=schedule,priority=700,pattern={{date 'YYYYMMDD'}}
             type=ref,priority=600,event=branch,enable=${{ github.event_name == 'push' }}
           flavor: latest=true
+          labels: |
+            org.opencontainers.image.title=FlexGet
+            org.opencontainers.image.description=Multipurpose automation tool for downloading media content from different sources
+            org.opencontainers.image.url=https://github.com/SmartFinn/Dockerfiles/pkgs/container/flexget
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
