--- a/.github/workflows/docker-image-releasebell.yml
+++ b/.github/workflows/docker-image-releasebell.yml
@@ -80,6 +80,10 @@ jobs:
             type=schedule,priority=700,pattern={{date 'YYYYMMDD'}}
             type=ref,priority=600,event=branch,enable=${{ github.event_name == 'push' }}
           flavor: latest=true
+          labels: |
+            org.opencontainers.image.title=Release Bell
+            org.opencontainers.image.description=Stay on top of releases for repos you star on GitHub
+            org.opencontainers.image.url=https://github.com/SmartFinn/Dockerfiles/pkgs/container/releasebell
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
