--- a/.github/workflows/docker-image-trusted-cgi.yml
+++ b/.github/workflows/docker-image-trusted-cgi.yml
@@ -80,6 +80,10 @@ jobs:
             type=schedule,priority=700,pattern={{date 'YYYYMMDD'}}
             type=ref,priority=600,event=branch,enable=${{ github.event_name == 'push' }}
           flavor: latest=true
+          labels: |
+            org.opencontainers.image.title=Trusted-CGI
+            org.opencontainers.image.description=Lightweight runner for lambda functions/apps in CGI like mode
+            org.opencontainers.image.url=https://github.com/SmartFinn/Dockerfiles/pkgs/container/trusted-cgi
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
