--- a/.github/workflows/docker-image-vpnbook2proxy.yml
+++ b/.github/workflows/docker-image-vpnbook2proxy.yml
@@ -80,6 +80,10 @@ jobs:
             type=schedule,priority=700,pattern={{date 'YYYYMMDD'}}
             type=ref,priority=600,event=branch,enable=${{ github.event_name == 'push' }}
           flavor: latest=true
+          labels: |
+            org.opencontainers.image.title=vpnbook2proxy
+            org.opencontainers.image.description=Converts OpenVPN connection to socks proxy
+            org.opencontainers.image.url=https://github.com/SmartFinn/Dockerfiles/pkgs/container/vpnbook2proxy
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
