--- a/.github/workflows/docker-image-releasebell.yml
+++ b/.github/workflows/docker-image-releasebell.yml
@@ -8,7 +8,7 @@ on:
         default: ""
         required: false
   schedule:
-    - cron: "27 5 * * 6"
+    - cron: "27 5 11 * *"
   push:
     branches:
       - master
