vpnbook2proxy: fix if statement

--- a/.github/workflows/docker-image-vpnbook2proxy.yml
+++ b/.github/workflows/docker-image-vpnbook2proxy.yml
@@ -44,7 +44,7 @@ jobs:
           ${{ env.CONTEXT_PATH }}/Dockerfile >> $GITHUB_ENV
 
       - name: Get Alpine image version
-        if: env.ALPINE_VER = ''
+        if: env.ALPINE_VER == ''
         id: get_alpine_version
         run: >-
           curl -s 'https://img.shields.io/docker/v/_/alpine?arch=amd64' |
