--- a/.github/workflows/docker-image-vpnbook2proxy.yml
+++ b/.github/workflows/docker-image-vpnbook2proxy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get Apline version from Dockerfile
-        id: get_version
+        id: get_alpine_image_version
         run: >-
           awk -F: '/alpine:[0-9][0-9.]+/ {print "APLINE_VER="$2;}'
           ${{ env.CONTEXT_PATH }}/Dockerfile >> $GITHUB_ENV
