--- a/releasebell/Dockerfile
+++ b/releasebell/Dockerfile
@@ -3,8 +3,7 @@ LABEL maintainer "SmartFinn (https://github.com/SmartFinn)"
 
 ARG RELEASEBELL_VERSION=v1.8.0
 
-ENV LANG=C.UTF-8 \
-    NODE_ENV=production
+ENV LANG=C.UTF-8
 
 COPY rootfs/ /
 
